Bug #504 If I enable Table of Contents Location, so that the TOC appears in the content div, and that content div is shorter than the TOC, the TOC will overlap into the next section instead of stretching the div it's in.
Eloquent-made minor tweak/clean fix to css

--- a/sites/all/themes/openscholar/scholar_quinn/scholar-quinn.css
+++ b/sites/all/themes/openscholar/scholar_quinn/scholar-quinn.css
@@ -1,7 +1,10 @@
 html, body {
   background: #E5E5E4;
   color:#333;
+
   }
+
+ div {clear:right;}
 
 #page {
   max-width: 1260px;
